Added conda environment creation to install script

--- a/static_map_webpage/index.html
+++ b/static_map_webpage/index.html
@@ -31,7 +31,7 @@
     <script>
       let map;
       let geoJsonLayer;
-      const GEOJSON_URL = "buildings.geojson"; // Path to your GeoJSON file
+      const GEOJSON_URL = "buildings_using_hcc.geojson";
 
       // Define base layers
       const baseLayers = {
