"last updated" now shows actual time that active departments was retrieved

--- a/static_map_webpage/index.html
+++ b/static_map_webpage/index.html
@@ -30,6 +30,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-yaml/4.1.0/js-yaml.min.js"></script>
 
     <!-- Main JS file -->
-    <script src="index.js"></script>
+    <script src="index.js?t=${Date.now()}"></script>
   </body>
 </html>
